--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,23 @@
-# Site settings
-title: Jane Du
-email: jane.z.du@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  The musings and messing-arounds of a distracted student.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://zhuangjindu.github.io" # the base hostname & protocol for your site
-twitter_username: janezdu
-github_username:  zhuangjindu
+title:            Jane Du
+description:      The messing-arounds of a distracted student.
+url:              http://zhuangjindu.github.io
+signoff:          Jane Du
+disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
+facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
+google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 
-# Build settings
-markdown: kramdown
+links:
+  - name:         About
+    url:          /about
+  - name:         Blog
+    url:          http://zhuangjindu.github.io/blogs
+    external:     true
+  - name:         GitHub
+    url:          http://github.com/zhuangjindu
+    external:     true
+highlighter:      pygments
+permalink:        pretty
+# markdown:         redcarpet
+# redcarpet:
+#   extensions:
+#     - smart
